feat(home): extend layout

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,18 +1,24 @@
 <div class="content" role="main">
-  <h2>Welcome</h2>
-  <div class="card-container">
-    <a routerLink="/navigator" class="card">
-      <span>See transactions</span>
-    </a>
-  </div>
+  <h2 class="mb-4">Welcome</h2>
+  <a routerLink="/navigator" class="mb-4">
+    <button type="button" class="btn btn-primary">
+      See transactions
+    </button>
+  </a>
   <div>You have {{ total }} transactions</div>
   <div class="card-container">
     <div *ngFor="let tab of objectKeys(navigatorTabs)" class="card card-small">
-      <h4>{{ amounts[tab] }}</h4>
-      <p>{{ titles[tab] }}</p>
-      <a [routerLink]="['/navigator']" [queryParams]="{ tab: navigatorTabs[tab]}">
-        <span>See all</span>
-      </a>
+      <div class="card-body container">
+        <h5>{{ amounts[tab] }}</h5>
+        <p class="card__title">{{ titles[tab] }}</p>
+        <div class="button-container">
+          <a [routerLink]="['/navigator']" [queryParams]="{ tab: navigatorTabs[tab]}">
+          <button type="button" class="btn btn-primary">
+            See all
+          </button>
+        </a>
+        </div>     
+      </div>
     </div>
   </div>
 </div>
